@@ -317,6 +317,7 @@ LUA
 • |vim.json.encode()| has an `indent` option for pretty-formatting.
 • |vim.json.encode()| has an `sort_keys` option.
 • |Range:is_empty()| to check if a |vim.Range| is empty.
+• |vim.ui.input()| has a `hide` optino for hidding the user input.
 
 OPTIONS
 
